force-app/main/default/objects/OrderInfomation__c/OrderInfomation__c.object-meta.xml
<CustomObject>
    <label>オーダー情報</label>
    <nameField>
        <label>オーダー情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>