force-app/main/default/objects/OrderInfomation__c/fields/C_DrawingNo__c.field-meta.xml
<CustomField>
    <fullName>C_DrawingNo__c</fullName>
    <label>工事図面番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>