force-app/main/default/objects/OrderInfomation__c/fields/ConstructionRemark__c.field-meta.xml
<CustomField>
    <fullName>ConstructionRemark__c</fullName>
    <label>工事情報 備考</label>
    <type>TextArea</type>
</CustomField>