force-app/main/default/objects/OrderInfomation__c/fields/CorrespondingOpp__c.field-meta.xml
<CustomField>
    <fullName>CorrespondingOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>案件化したものについて関連付けをしてください。</inlineHelpText>
    <label>対応案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>オーダー情報 (対応案件)</relationshipLabel>
    <relationshipName>OrderInfos</relationshipName>
    <type>Lookup</type>
</CustomField>