force-app/main/default/objects/OrderInfomation__c/fields/DepartmentAndDivision__c.field-meta.xml
<CustomField>
    <fullName>DepartmentAndDivision__c</fullName>
    <defaultValue>$User.DepartmentAndDivisionCopy__c</defaultValue>
    <label>本支社</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01_本社</fullName>
            </value>
            <value>
                <fullName>02_北海道支社</fullName>
            </value>
            <value>
                <fullName>03_東北支社</fullName>
            </value>
            <value>
                <fullName>04_関越支社</fullName>
            </value>
            <value>
                <fullName>05_神奈川支社</fullName>
            </value>
            <value>
                <fullName>06_北陸支社</fullName>
            </value>
            <value>
                <fullName>07_中部支社</fullName>
            </value>
            <value>
                <fullName>08_関西支社</fullName>
            </value>
            <value>
                <fullName>09_中国支社</fullName>
            </value>
            <value>
                <fullName>10_四国支社</fullName>
            </value>
            <value>
                <fullName>11_九州支社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>