force-app/main/default/objects/OrderInfomation__c/fields/DrawingNo01__c.field-meta.xml
<CustomField>
    <fullName>DrawingNo01__c</fullName>
    <label>製作所1 機器図面番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>