force-app/main/default/objects/OrderInfomation__c/fields/DrawingNo02__c.field-meta.xml
<CustomField>
    <fullName>DrawingNo02__c</fullName>
    <label>製作所2 機器図面番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>