force-app/main/default/objects/OrderInfomation__c/fields/Factory01__c.field-meta.xml
<CustomField>
    <fullName>Factory01__c</fullName>
    <label>製作所1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>神電</fullName>
            </value>
            <value>
                <fullName>伊電長崎</fullName>
            </value>
            <value>
                <fullName>配電</fullName>
            </value>
            <value>
                <fullName>系電</fullName>
            </value>
            <value>
                <fullName>名電</fullName>
            </value>
            <value>
                <fullName>京電</fullName>
            </value>
            <value>
                <fullName>MPEC</fullName>
            </value>
            <value>
                <fullName>MEE</fullName>
            </value>
            <value>
                <fullName>TMEIC</fullName>
                <isActive>false</isActive>
                <label>TMEIC</label>
            </value>
            <value>
                <fullName>中電</fullName>
                <isActive>false</isActive>
                <label>中電</label>
            </value>
            <value>
                <fullName>山電</fullName>
                <isActive>false</isActive>
                <label>山電</label>
            </value>
            <value>
                <fullName>稲電</fullName>
                <isActive>false</isActive>
                <label>稲電</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>