force-app/main/default/objects/OrderInfomation__c/fields/FactoryOrderNo01__c.field-meta.xml
<CustomField>
    <fullName>FactoryOrderNo01__c</fullName>
    <label>製作所1 オーダー番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>