force-app/main/default/objects/OrderInfomation__c/fields/FactoryOrderNo02__c.field-meta.xml
<CustomField>
    <fullName>FactoryOrderNo02__c</fullName>
    <label>製作所2 オーダー番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>