force-app/main/default/objects/OrderInfomation__c/fields/FactoryRemark01__c.field-meta.xml
<CustomField>
    <fullName>FactoryRemark01__c</fullName>
    <label>製作所1 備考</label>
    <type>TextArea</type>
</CustomField>