force-app/main/default/objects/OrderInfomation__c/fields/FactoryRemark02__c.field-meta.xml
<CustomField>
    <fullName>FactoryRemark02__c</fullName>
    <label>製作所2 備考</label>
    <type>TextArea</type>
</CustomField>