force-app/main/default/objects/OrderInfomation__c/fields/InstallDate__c.field-meta.xml
<CustomField>
    <fullName>InstallDate__c</fullName>
    <label>納入日</label>
    <type>Date</type>
</CustomField>