force-app/main/default/objects/OrderInfomation__c/fields/MachineRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>MachineRenewalDate__c</fullName>
    <label>部分更新時期</label>
    <type>Date</type>
</CustomField>