force-app/main/default/objects/OrderInfomation__c/fields/MachineRenewalDateAlert__c.field-meta.xml
<CustomField>
    <fullName>MachineRenewalDateAlert__c</fullName>
    <label>部分更新前アラート</label>
    <type>Date</type>
</CustomField>