force-app/main/default/objects/OrderInfomation__c/fields/MachineRenewalDateAlertOff__c.field-meta.xml
<CustomField>
    <fullName>MachineRenewalDateAlertOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>部分更新完了</label>
    <type>Checkbox</type>
</CustomField>