force-app/main/default/objects/OrderInfomation__c/fields/MaintainanceCompany__c.field-meta.xml
<CustomField>
    <fullName>MaintainanceCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>保守請負社</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>オーダー情報 (保守請負社)</relationshipLabel>
    <relationshipName>C_OrderInfomations</relationshipName>
    <type>Lookup</type>
</CustomField>