force-app/main/default/objects/OrderInfomation__c/fields/MaintainanceRemark__c.field-meta.xml
<CustomField>
    <fullName>MaintainanceRemark__c</fullName>
    <label>保守備考</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>