force-app/main/default/objects/OrderInfomation__c/fields/MaintenanceLog__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceLog__c</fullName>
    <label>保守履歴</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>