force-app/main/default/objects/OrderInfomation__c/fields/MPECChargeHeadquarters__c.field-meta.xml
<CustomField>
    <fullName>MPECChargeHeadquarters__c</fullName>
    <label>MPEC担当本部</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>東本</fullName>
            </value>
            <value>
                <fullName>中本</fullName>
            </value>
            <value>
                <fullName>西本</fullName>
            </value>
            <value>
                <fullName>九本</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>