force-app/main/default/objects/OrderInfomation__c/fields/MPECSalesPartInCharge__c.field-meta.xml
<CustomField>
    <fullName>MPECSalesPartInCharge__c</fullName>
    <label>MPEC営業担当部・課</label>
    <length>255</length>
    <type>Text</type>
</CustomField>