force-app/main/default/objects/OrderInfomation__c/fields/MPECSalesPersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>MPECSalesPersonInCharge__c</fullName>
    <label>MPEC営業担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>