force-app/main/default/objects/OrderInfomation__c/fields/MPECTechnicalPartInCharge__c.field-meta.xml
<CustomField>
    <fullName>MPECTechnicalPartInCharge__c</fullName>
    <label>MPEC技術担当部・課</label>
    <length>255</length>
    <type>Text</type>
</CustomField>