force-app/main/default/objects/OrderInfomation__c/fields/MPECTechnicalPersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>MPECTechnicalPersonInCharge__c</fullName>
    <label>MPEC技術担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>