force-app/main/default/objects/OrderInfomation__c/fields/Oppt__c.field-meta.xml
<CustomField>
    <fullName>Oppt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>オーダー情報</relationshipLabel>
    <relationshipName>Opps10</relationshipName>
    <type>Lookup</type>
</CustomField>