force-app/main/default/objects/OrderInfomation__c/fields/OrderInfoOwnerDivision__c.field-meta.xml
<CustomField>
    <fullName>OrderInfoOwnerDivision__c</fullName>
    <formula>Owner:User.Division</formula>
    <label>所有者 ディビジョン</label>
    <type>Text</type>
</CustomField>