force-app/main/default/objects/OrderInfomation__c/fields/OrderLostKbn__c.field-meta.xml
<CustomField>
    <fullName>OrderLostKbn__c</fullName>
    <description>20200413追加　オーダー情報の移行時、運用時に受注後のオーダー情報なのか、失注時のオーダー情報なのかを区別するために作成した項目</description>
    <label>受注／失注区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>当社受注</fullName>
            </value>
            <value>
                <fullName>当社失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>