force-app/main/default/objects/OrderInfomation__c/fields/OtherDetail__c.field-meta.xml
<CustomField>
    <fullName>OtherDetail__c</fullName>
    <label>更新活動状況メモ</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>