force-app/main/default/objects/OrderInfomation__c/fields/P_CooperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>P_CooperatingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>プラ建協力会社</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>登録/選択した取引先が事業所レコードタイプではありません。
取引先を新規作成する場合は、事業所として登録してください。</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>オーダー情報 (プラ建協力会社)</relationshipLabel>
    <relationshipName>P_CooperatingCompanies</relationshipName>
    <type>Lookup</type>
</CustomField>