force-app/main/default/objects/OrderInfomation__c/fields/P_OrderNo__c.field-meta.xml
<CustomField>
    <fullName>P_OrderNo__c</fullName>
    <label>プラ建オーダー番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>