force-app/main/default/objects/OrderInfomation__c/fields/P_Person__c.field-meta.xml
<CustomField>
    <fullName>P_Person__c</fullName>
    <label>技術者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>