force-app/main/default/objects/OrderInfomation__c/fields/PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>PersonInCharge__c</fullName>
    <label>プラ建担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>