force-app/main/default/objects/OrderInfomation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>SBU名で検索頂くと、SBU毎の全ての製品結果を表示できます</inlineHelpText>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>オーダー情報</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>