force-app/main/default/objects/OrderInfomation__c/fields/Prop__c.field-meta.xml
<CustomField>
    <fullName>Prop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>オーダー情報</relationshipLabel>
    <relationshipName>Props4</relationshipName>
    <type>Lookup</type>
</CustomField>