force-app/main/default/objects/OrderInfomation__c/fields/S_R__c.field-meta.xml
<CustomField>
    <fullName>S_R__c</fullName>
    <label>売報番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>