force-app/main/default/objects/OrderInfomation__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受変電</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>自家発</fullName>
            </value>
            <value>
                <fullName>ビルシ</fullName>
            </value>
            <value>
                <fullName>映像</fullName>
            </value>
            <value>
                <fullName>PVスマエネ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>