force-app/main/default/objects/OrderInfomation__c/fields/SharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SharePointURL__c</fullName>
    <label>SharePoint完成図書URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>