force-app/main/default/objects/OrderInfomation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>案件化</fullName>
            </value>
            <value>
                <fullName>更新済（当社）</fullName>
            </value>
            <value>
                <fullName>更新済（他社）</fullName>
            </value>
            <value>
                <fullName>撤去</fullName>
            </value>
            <value>
                <fullName>要調査</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>