force-app/main/default/objects/OrderInfomation__c/fields/UsageEndDate__c.field-meta.xml
<CustomField>
    <fullName>UsageEndDate__c</fullName>
    <label>全体更新時期</label>
    <type>Date</type>
</CustomField>