force-app/main/default/objects/OrderInfomation__c/fields/UsageEndDateAlert__c.field-meta.xml
<CustomField>
    <fullName>UsageEndDateAlert__c</fullName>
    <label>全体更新前アラート</label>
    <type>Date</type>
</CustomField>