force-app/main/default/objects/OrderInfomation__c/fields/UsageEndDateAlertOff__c.field-meta.xml
<CustomField>
    <fullName>UsageEndDateAlertOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>全体更新完了</label>
    <type>Checkbox</type>
</CustomField>