force-app/main/default/objects/OrderInfomation__c/listViews/MyOrderInformation.listView-meta.xml
<ListView>
    <fullName>MyOrderInformation</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Oppt__c</columns>
    <columns>Product__c</columns>
    <columns>UsageEndDate__c</columns>
    <columns>MachineRenewalDate__c</columns>
    <columns>MachineRenewalYear__c</columns>
    <filterScope>Mine</filterScope>
    <label>私のオーダー情報</label>
</ListView>