force-app/main/default/objects/OrderInfomation__c/listViews/pvsumaeneorder.listView-meta.xml
<ListView>
    <fullName>pvsumaeneorder</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Oppt__c</columns>
    <columns>Product__c</columns>
    <columns>InstallDate__c</columns>
    <columns>UsageEndDate__c</columns>
    <columns>MachineRenewalDate__c</columns>
    <columns>MachineRenewalYear__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>PVスマエネ</value>
    </filters>
    <label>F_PVスマエネのオーダー情報</label>
</ListView>