force-app/main/default/objects/OrderInfomation__c/listViews/X11OrderInfomation.listView-meta.xml
<ListView>
    <fullName>X11OrderInfomation</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SBU__c</columns>
    <columns>Oppt__c</columns>
    <columns>UsageEndDate__c</columns>
    <columns>MachineRenewalDate__c</columns>
    <columns>MachineRenewalYear__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OrderLostKbn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>02_北海道支社</value>
    </filters>
    <label>11.北海道支社のオーダー情報</label>
</ListView>