force-app/main/default/objects/OrderInfomation__c/listViews/X131313.listView-meta.xml
<ListView>
    <fullName>X131313</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SBU__c</columns>
    <columns>Oppt__c</columns>
    <columns>UsageEndDate__c</columns>
    <columns>MachineRenewalDate__c</columns>
    <columns>MachineRenewalYear__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>04_関越支社</value>
    </filters>
    <label>13.関越支社のオーダー情報</label>
</ListView>