force-app/main/default/objects/OrderInfomation__c/listViews/X13OrderInfomation.listView-meta.xml
<ListView>
    <fullName>X13OrderInfomation</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SBU__c</columns>
    <columns>Oppt__c</columns>
    <columns>InstallDate__c</columns>
    <columns>UsageEndDate__c</columns>
    <columns>MachineRenewalDate__c</columns>
    <columns>MachineRenewalYear__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>06_北陸支社</value>
    </filters>
    <label>15.北陸支社のオーダー情報</label>
</ListView>