force-app/main/default/objects/OrderInfomation__c/listViews/X141414.listView-meta.xml
<ListView>
    <fullName>X141414</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SBU__c</columns>
    <columns>Oppt__c</columns>
    <columns>UsageEndDate__c</columns>
    <columns>MachineRenewalDate__c</columns>
    <columns>MachineRenewalYear__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentAndDivision__c</field>
        <operation>equals</operation>
        <value>05_神奈川支社</value>
    </filters>
    <label>14.神奈川支社のオーダー情報</label>
</ListView>